@@ -178,6 +178,10 @@ Publisher::~Publisher()
     ACE_DEBUG((LM_DEBUG, ACE_TEXT("(%P|%t) INFO: finalizing the publisher.\n")));
   }
 
+  dataWriter_ = NULL;
+  publisher_ = NULL;
+  topic_ = NULL;
+
   // Release the participant
   if( 0 == CORBA::is_nil( this->participant_.in())) {
     DDS::DomainParticipantFactory_var dpf = TheParticipantFactory;
